[tool.poetry]
name = "system-integration"
version = "0.1.0"
description = "Class for Software Development 2nd semester"
authors = ["AndreasPB <andreas.p.brodersen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.19"
Paste = "^3.5.0"
requests = "^2.27.1"
PyJWT = "^2.3.0"
Faker = "^13.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
